--- a/ex03/responsive.css
+++ b/ex03/responsive.css
@@ -1,6 +1,15 @@
 body {
 	background-image: url("dmitri.jpg");
 }
+
+#container {
+	margin-right: auto;
+	margin-left: auto;
+	width: 1000px;
+	height: 1000px;
+
+}
+
 table
 {
 	padding: 0px;
