--- a/rush00/public/views/login.html
+++ b/rush00/public/views/login.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-
 <html>
 	<head>
 		<link rel="stylesheet" href="views/stylesheets/style.css"/>
@@ -11,7 +9,7 @@
 
 							<!-- Header -->
 							<div id="header">
-								<h1>&#10037;&AElig;ternal Store&#10037;</h1>
+								<h1>&#10037;&AElig;ternal Store Login&#10037;</h1>
 							</div>
 
 				<div id="nav">
@@ -27,23 +25,22 @@
 
 						</script>
 					</ul>
-
-					<form id="search">
-						<input id="text" maxlength="100"></input>
-						<button>search</button>
-					</form>
-						<a href="http://localhost:3000/login"><h3 id="login">login</h3></a>
+						<a href="http://google.com"><h3 id="login">login</h3></a>
 						<a href="http://google.com"><h3 id="cart">cart</h3></a>
 				</div>
 
 
 				<div id="main">
-					<div id="shop1" class="column">
-						<img id="google" src=""></img>
-					</div>
-
-					<div id="shop2" class="column">
-						<img id="ebay" src=""></img>
+					<div id="login-form" class="column">
+						<form id="userinfo">
+              <p>Enter your email</p>
+              <input id="email"></input>
+              <br>
+              <p id="paddpass">Enter your password</p>
+              <input id="password"></input>
+              <br>
+              <button id="submit">Submit</button>
+            </form>
 					</div>
 				</div>
 
