register, login and cart page done

--- a/rush00/public/views/login.html
+++ b/rush00/public/views/login.html
@@ -24,9 +24,13 @@
 							}
 
 						</script>
+						<form id="search">
+							<input id="text" maxlength="100"></input>
+							<button>search</button>
+						</form>
 					</ul>
-						<a href="http://google.com"><h3 id="login">login</h3></a>
-						<a href="http://google.com"><h3 id="cart">cart</h3></a>
+						<a href="http://localhost:3000/login"><h3 id="login">login</h3></a>
+						<a href="http://localhost:3000/cart"><h3 id="cart">cart &#128722;</h3></a>
 				</div>
 
 
@@ -37,9 +41,11 @@
               <input id="email"></input>
               <br>
               <p id="paddpass">Enter your password</p>
-              <input id="password"></input>
+              <input id="password" type="password"></input>
               <br>
               <button id="submit">Submit</button>
+							<br>
+							<p>Not registered yet? <a href="http://localhost:3000/register" id="click-here">Click Here</a></p?
             </form>
 					</div>
 				</div>
