--- a/rush00/public/views/cart.html
+++ b/rush00/public/views/cart.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-
 <html>
 	<head>
 		<link rel="stylesheet" href="views/stylesheets/style.css"/>
@@ -7,11 +5,9 @@
 
 	<body>
 		<div id="container">
-
-
 							<!-- Header -->
 							<div id="header">
-								<h1>&#10037;&AElig;ternal Store&#10037;</h1>
+								<h1>&#10037;&AElig;ternal Cart&#10037;</h1>
 							</div>
 
 				<div id="nav">
@@ -27,24 +23,25 @@
 
 						</script>
 					</ul>
-
-					<form id="search">
+          <form id="search">
 						<input id="text" maxlength="100"></input>
 						<button>search</button>
 					</form>
-						<a href="http://localhost:3000/login"><h3 id="login">login</h3></a>
-						<a href="http://localhost:3000/cart"><h3 id="cart">cart &#128722;</h3></a>
+
+          <a href="http://localhost:3000/login"><h3 id="login">login</h3></a>
+        <!--  <a href="http://localhost:3000/cart"><h3 id="cart">cart &#128722;</h3></a> -->
 				</div>
 
-
-				<div id="main">
-					<div id="shop1" class="column">
-						<img id="google" src=""></img>
-					</div>
-
-					<div id="shop2" class="column">
-						<img id="ebay" src=""></img>
-					</div>
+				<div id="cartmain">
+          <h1 id="current-cart">&#128722; Current Cart &#128722;</h1>
+          <div id="cartitems">
+            <ul>
+              <!-- This is where all of your items will go -->
+            </ul>
+          </div>
+          <form>
+            <button id="checkout">Checkout</button>
+          </form>
 				</div>
 
 				<div id="shop-link">
