--- a/rush00/public/views/register.html
+++ b/rush00/public/views/register.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-
 <html>
 	<head>
 		<link rel="stylesheet" href="views/stylesheets/style.css"/>
@@ -11,7 +9,7 @@
 
 							<!-- Header -->
 							<div id="header">
-								<h1>&#10037;&AElig;ternal Store&#10037;</h1>
+								<h1>&#10037;&AElig;ternal Store Register&#10037;</h1>
 							</div>
 
 				<div id="nav">
@@ -27,23 +25,28 @@
 
 						</script>
 					</ul>
-
-					<form id="search">
+          <form id="search">
 						<input id="text" maxlength="100"></input>
 						<button>search</button>
 					</form>
-						<a href="http://localhost:3000/login"><h3 id="login">login</h3></a>
-						<a href="http://localhost:3000/cart"><h3 id="cart">cart &#128722;</h3></a>
+
+          <a href="http://localhost:3000/login"><h3 id="login">login</h3></a>
+          <a href="http://localhost:3000/cart"><h3 id="cart">cart &#128722;</h3></a>
 				</div>
 
-
 				<div id="main">
-					<div id="shop1" class="column">
-						<img id="google" src=""></img>
-					</div>
+					<div id="login-form" class="column">
+						<form id="userinfo">
+              <p>Enter your email</p>
+              <input id="email"></input>
+              <br>
+              <p id="paddpass">Enter your password</p>
+              <input id="password" type="password"></input>
+              <br>
+              <!-- Use same id as the login button -->
+              <button id="submit">Register</button>
 
-					<div id="shop2" class="column">
-						<img id="ebay" src=""></img>
+            </form>
 					</div>
 				</div>
 
