--- a/rush00/public/views/register.html
+++ b/rush00/public/views/register.html
@@ -43,9 +43,11 @@
               <p id="paddpass">Enter your password</p>
               <input id="password" type="password"></input>
               <br>
+              <p id="paddpass">Re - Enter your password</p>
+              <input id="re-password" type="password"></input>
+              <br>
               <!-- Use same id as the login button -->
-              <button id="submit">Register</button>
-
+              <button  onClick="createuser.js" method="post" id="submit">Register</button>
             </form>
 					</div>
 				</div>
