--- a/rush00/public/views/index.html
+++ b/rush00/public/views/index.html
@@ -3,6 +3,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="views/stylesheets/style.css"/>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.js"></script>
 	</head>
 
 	<body>
