--- a/rush00/public/views/index.html
+++ b/rush00/public/views/index.html
@@ -2,58 +2,76 @@
 
 <html>
 	<head>
+		<link rel="stylesheet" href="stylesheets/style.css"/> <!-- Temp -->
 		<link rel="stylesheet" href="views/stylesheets/style.css"/>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.js"></script>
 	</head>
 
 	<body>
 		<div id="container">
+			<!-- Header -->
+			<div id="header">
+				<h1>&#10037;&AElig;ternal Store&#10037;</h1>
+			</div>
 
-
-							<!-- Header -->
-							<div id="header">
-								<h1>&#10037;&AElig;ternal Store&#10037;</h1>
-							</div>
-
-				<div id="nav">
-					<h3 id="category">Categories</h3>
-
-					<ul>
-						<!-- Dynamically Generate These -->
-						<script>
-						//have to figure out how to pull these from the database
-							for (var i = 0; i < 10; i++) {
-								//document.write("<li class=\"items\"id=\"" + "item_" + i + "\">Hello World!Have a nice day!</li>");
-							}
-
-						</script>
-					</ul>
-
-					<form id="search">
-						<input id="text" maxlength="100"></input>
-						<button>search</button>
-					</form>
-						<a href="http://localhost:3000/login"><h3 id="login">login</h3></a>
-						<a href="http://localhost:3000/cart"><h3 id="cart">cart &#128722;</h3></a>
-				</div>
-
-
-				<div id="main">
-					<div id="shop1" class="column">
-						<img id="google" src=""></img>
-					</div>
-
-					<div id="shop2" class="column">
-						<img id="ebay" src=""></img>
+			<div id="nav">
+				<!--<h3 id="category">Categories</h3>-->
+				<div class="dropdown">
+					<button class="dropButton">Categories</button>
+					<div class="dropdownContent">
+						<a href="#">Headphones</a>
+						<a href="#">Cables</a>
+						<a href="#">TVs</a>
 					</div>
 				</div>
 
-				<div id="shop-link">
+				<form id="search" action="#">
+					<input type="text" placeholder="Search..." id="text" maxlength="100"></input>
+					<button type="submit">&#128269</button>
+				</form>
+				<a href="http://localhost:3000/login"><h3 id="login">login</h3></a>
+				<a href="http://localhost:3000/cart"><h3 id="cart">cart &#128722;</h3></a>
+			</div>
+
+
+			<!-- <div id="main">
+				<div id="shop1" class="column">
+					<img id="google" src=""></img>
 				</div>
 
-				<div id="footer">
-					<p id="copyright">&#169; efriedma 2019</p>
+				<div id="shop2" class="column">
+					<img id="ebay" src=""></img>
 				</div>
+			</div> -->
+			<div id="mainContainer">
+				<div class="row">
+					<div class="column">
+						<img src="http://www.bridgesofgraceucc.org/wp-content/uploads/2011/01/made.png">
+						<img src="http://www.bridgesofgraceucc.org/wp-content/uploads/2011/01/made.png">
+						<img src="http://www.bridgesofgraceucc.org/wp-content/uploads/2011/01/made.png">
+						<img src="http://www.bridgesofgraceucc.org/wp-content/uploads/2011/01/made.png">
+						<img src="http://www.bridgesofgraceucc.org/wp-content/uploads/2011/01/made.png">
+						<img src="http://www.bridgesofgraceucc.org/wp-content/uploads/2011/01/made.png">
+						<img src="http://www.bridgesofgraceucc.org/wp-content/uploads/2011/01/made.png">
+					</div>
+					<div class="column">
+						<img src="http://www.bridgesofgraceucc.org/wp-content/uploads/2011/01/made.png">
+						<img src="http://www.bridgesofgraceucc.org/wp-content/uploads/2011/01/made.png">
+						<img src="http://www.bridgesofgraceucc.org/wp-content/uploads/2011/01/made.png">
+						<img src="http://www.bridgesofgraceucc.org/wp-content/uploads/2011/01/made.png">
+						<img src="http://www.bridgesofgraceucc.org/wp-content/uploads/2011/01/made.png">
+						<img src="http://www.bridgesofgraceucc.org/wp-content/uploads/2011/01/made.png">
+						<img src="http://www.bridgesofgraceucc.org/wp-content/uploads/2011/01/made.png">
+					</div>
+				</div>
+			</div>
+
+			<div id="shop-link">
+			</div>
+
+			<div id="footer">
+				<p id="copyright">&#169; efriedma 2019</p>
+			</div>
 
 			</div>
 	</body>
